@@ -1,0 +1,6 @@
+===========================================================================
+$NetBSD$
+
+Install pyNN-reportlab package for PDF support
+
+===========================================================================
