@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2012/06/12 13:37:00 obache Exp $
+# $NetBSD: Makefile,v 1.10 2012/10/06 14:11:16 asau Exp $
 #
 
-DISTNAME=	blockdiag-1.1.6
+DISTNAME=	blockdiag-1.2.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	graphics
 MASTER_SITES=	http://pypi.python.org/packages/source/b/blockdiag/
