@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2011/12/07 13:43:30 obache Exp $
+# $NetBSD: Makefile,v 1.5 2012/10/06 14:11:17 asau Exp $
 #
 
-DISTNAME=	nwdiag-0.7.0
+DISTNAME=	nwdiag-0.9.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	graphics
 MASTER_SITES=	http://pypi.python.org/packages/source/n/nwdiag/
@@ -11,7 +11,7 @@ HOMEPAGE=	http://blockdiag.com/nwdiag/build/html/
 COMMENT=	Simple network-diagram image generator
 LICENSE=	apache-2.0
 
-DEPENDS+=	${PYPKGPREFIX}-blockdiag>=1.1.0:../../graphics/py-blockdiag
+DEPENDS+=	${PYPKGPREFIX}-blockdiag>=1.1.2:../../graphics/py-blockdiag
 
 USE_LANGUAGES=	# none
 
