@@ -1,5 +1,6 @@
-@comment $NetBSD$
+@comment $NetBSD: PLIST,v 1.3 2011/12/07 13:43:30 obache Exp $
 bin/nwdiag
+bin/packetdiag
 bin/rackdiag
 ${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
 ${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
@@ -7,12 +8,6 @@ ${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
 ${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
 ${PYSITELIB}/${EGG_INFODIR}/requires.txt
 ${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/nwdiag/DiagramDraw.py
-${PYSITELIB}/nwdiag/DiagramDraw.pyc
-${PYSITELIB}/nwdiag/DiagramDraw.pyo
-${PYSITELIB}/nwdiag/DiagramMetrics.py
-${PYSITELIB}/nwdiag/DiagramMetrics.pyc
-${PYSITELIB}/nwdiag/DiagramMetrics.pyo
 ${PYSITELIB}/nwdiag/__init__.py
 ${PYSITELIB}/nwdiag/__init__.pyc
 ${PYSITELIB}/nwdiag/__init__.pyo
@@ -22,12 +17,18 @@ ${PYSITELIB}/nwdiag/builder.pyo
 ${PYSITELIB}/nwdiag/command.py
 ${PYSITELIB}/nwdiag/command.pyc
 ${PYSITELIB}/nwdiag/command.pyo
-${PYSITELIB}/nwdiag/diagparser.py
-${PYSITELIB}/nwdiag/diagparser.pyc
-${PYSITELIB}/nwdiag/diagparser.pyo
 ${PYSITELIB}/nwdiag/elements.py
 ${PYSITELIB}/nwdiag/elements.pyc
 ${PYSITELIB}/nwdiag/elements.pyo
+${PYSITELIB}/nwdiag/drawer.py
+${PYSITELIB}/nwdiag/drawer.pyc
+${PYSITELIB}/nwdiag/drawer.pyo
+${PYSITELIB}/nwdiag/metrics.py
+${PYSITELIB}/nwdiag/metrics.pyc
+${PYSITELIB}/nwdiag/metrics.pyo
+${PYSITELIB}/nwdiag/parser.py
+${PYSITELIB}/nwdiag/parser.pyc
+${PYSITELIB}/nwdiag/parser.pyo
 ${PYSITELIB}/nwdiag/tests/test_builder.py
 ${PYSITELIB}/nwdiag/tests/test_builder.pyc
 ${PYSITELIB}/nwdiag/tests/test_builder.pyo
@@ -40,6 +41,9 @@ ${PYSITELIB}/nwdiag/tests/test_generate_diagram.pyo
 ${PYSITELIB}/nwdiag/tests/test_pep8.py
 ${PYSITELIB}/nwdiag/tests/test_pep8.pyc
 ${PYSITELIB}/nwdiag/tests/test_pep8.pyo
+${PYSITELIB}/nwdiag/tests/test_rst_directives.py
+${PYSITELIB}/nwdiag/tests/test_rst_directives.pyc
+${PYSITELIB}/nwdiag/tests/test_rst_directives.pyo
 ${PYSITELIB}/nwdiag/utils/__init__.py
 ${PYSITELIB}/nwdiag/utils/__init__.pyc
 ${PYSITELIB}/nwdiag/utils/__init__.pyo
@@ -52,12 +56,48 @@ ${PYSITELIB}/nwdiag/utils/rst/directives.pyo
 ${PYSITELIB}/nwdiag_sphinxhelper.py
 ${PYSITELIB}/nwdiag_sphinxhelper.pyc
 ${PYSITELIB}/nwdiag_sphinxhelper.pyo
-${PYSITELIB}/rackdiag/DiagramDraw.py
-${PYSITELIB}/rackdiag/DiagramDraw.pyc
-${PYSITELIB}/rackdiag/DiagramDraw.pyo
-${PYSITELIB}/rackdiag/DiagramMetrics.py
-${PYSITELIB}/rackdiag/DiagramMetrics.pyc
-${PYSITELIB}/rackdiag/DiagramMetrics.pyo
+${PYSITELIB}/packetdiag/__init__.py
+${PYSITELIB}/packetdiag/__init__.pyc
+${PYSITELIB}/packetdiag/__init__.pyo
+${PYSITELIB}/packetdiag/builder.py
+${PYSITELIB}/packetdiag/builder.pyc
+${PYSITELIB}/packetdiag/builder.pyo
+${PYSITELIB}/packetdiag/command.py
+${PYSITELIB}/packetdiag/command.pyc
+${PYSITELIB}/packetdiag/command.pyo
+${PYSITELIB}/packetdiag/drawer.py
+${PYSITELIB}/packetdiag/drawer.pyc
+${PYSITELIB}/packetdiag/drawer.pyo
+${PYSITELIB}/packetdiag/elements.py
+${PYSITELIB}/packetdiag/elements.pyc
+${PYSITELIB}/packetdiag/elements.pyo
+${PYSITELIB}/packetdiag/metrics.py
+${PYSITELIB}/packetdiag/metrics.pyc
+${PYSITELIB}/packetdiag/metrics.pyo
+${PYSITELIB}/packetdiag/noderenderers.py
+${PYSITELIB}/packetdiag/noderenderers.pyc
+${PYSITELIB}/packetdiag/noderenderers.pyo
+${PYSITELIB}/packetdiag/parser.py
+${PYSITELIB}/packetdiag/parser.pyc
+${PYSITELIB}/packetdiag/parser.pyo
+${PYSITELIB}/packetdiag/tests/test_pep8.py
+${PYSITELIB}/packetdiag/tests/test_pep8.pyc
+${PYSITELIB}/packetdiag/tests/test_pep8.pyo
+${PYSITELIB}/packetdiag/tests/test_rst_directives.py
+${PYSITELIB}/packetdiag/tests/test_rst_directives.pyc
+${PYSITELIB}/packetdiag/tests/test_rst_directives.pyo
+${PYSITELIB}/packetdiag/utils/__init__.py
+${PYSITELIB}/packetdiag/utils/__init__.pyc
+${PYSITELIB}/packetdiag/utils/__init__.pyo
+${PYSITELIB}/packetdiag/utils/rst/__init__.py
+${PYSITELIB}/packetdiag/utils/rst/__init__.pyc
+${PYSITELIB}/packetdiag/utils/rst/__init__.pyo
+${PYSITELIB}/packetdiag/utils/rst/directives.py
+${PYSITELIB}/packetdiag/utils/rst/directives.pyc
+${PYSITELIB}/packetdiag/utils/rst/directives.pyo
+${PYSITELIB}/packetdiag_sphinxhelper.py
+${PYSITELIB}/packetdiag_sphinxhelper.pyc
+${PYSITELIB}/packetdiag_sphinxhelper.pyo
 ${PYSITELIB}/rackdiag/__init__.py
 ${PYSITELIB}/rackdiag/__init__.pyc
 ${PYSITELIB}/rackdiag/__init__.pyo
@@ -67,18 +107,24 @@ ${PYSITELIB}/rackdiag/builder.pyo
 ${PYSITELIB}/rackdiag/command.py
 ${PYSITELIB}/rackdiag/command.pyc
 ${PYSITELIB}/rackdiag/command.pyo
-${PYSITELIB}/rackdiag/diagparser.py
-${PYSITELIB}/rackdiag/diagparser.pyc
-${PYSITELIB}/rackdiag/diagparser.pyo
 ${PYSITELIB}/rackdiag/elements.py
 ${PYSITELIB}/rackdiag/elements.pyc
 ${PYSITELIB}/rackdiag/elements.pyo
-${PYSITELIB}/rackdiag/plugins.py
-${PYSITELIB}/rackdiag/plugins.pyc
-${PYSITELIB}/rackdiag/plugins.pyo
+${PYSITELIB}/rackdiag/drawer.py
+${PYSITELIB}/rackdiag/drawer.pyc
+${PYSITELIB}/rackdiag/drawer.pyo
+${PYSITELIB}/rackdiag/metrics.py
+${PYSITELIB}/rackdiag/metrics.pyc
+${PYSITELIB}/rackdiag/metrics.pyo
+${PYSITELIB}/rackdiag/parser.py
+${PYSITELIB}/rackdiag/parser.pyc
+${PYSITELIB}/rackdiag/parser.pyo
 ${PYSITELIB}/rackdiag/tests/test_pep8.py
 ${PYSITELIB}/rackdiag/tests/test_pep8.pyc
 ${PYSITELIB}/rackdiag/tests/test_pep8.pyo
+${PYSITELIB}/rackdiag/tests/test_rst_directives.py
+${PYSITELIB}/rackdiag/tests/test_rst_directives.pyc
+${PYSITELIB}/rackdiag/tests/test_rst_directives.pyo
 ${PYSITELIB}/rackdiag/utils/__init__.py
 ${PYSITELIB}/rackdiag/utils/__init__.pyc
 ${PYSITELIB}/rackdiag/utils/__init__.pyo
