@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.3 2011/10/06 06:33:19 obache Exp $
+$NetBSD: distinfo,v 1.4 2011/12/07 13:43:30 obache Exp $
 
-SHA1 (nwdiag-0.7.0.tar.gz) = bacded4368d613c4d87676f4ee35b6bc40f4a183
-RMD160 (nwdiag-0.7.0.tar.gz) = 6456be34e665e4963226c23628be98251b19aa96
-Size (nwdiag-0.7.0.tar.gz) = 77278 bytes
+SHA1 (nwdiag-0.9.2.tar.gz) = 3dcc54b9a28f130b43d0d2e7b8b7e4b610e759a0
+RMD160 (nwdiag-0.9.2.tar.gz) = 1fcb7b556964730bc6b93b8446e5958e2a747052
+Size (nwdiag-0.9.2.tar.gz) = 94427 bytes
