@@ -1,4 +1,4 @@
-@comment $NetBSD$
+@comment $NetBSD: PLIST,v 1.3 2012/03/21 14:32:13 obache Exp $
 bin/seqdiag
 ${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
 ${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
@@ -27,15 +27,15 @@ ${PYSITELIB}/seqdiag/metrics.pyo
 ${PYSITELIB}/seqdiag/parser.py
 ${PYSITELIB}/seqdiag/parser.pyc
 ${PYSITELIB}/seqdiag/parser.pyo
-${PYSITELIB}/seqdiag/tests/test_builder.py
-${PYSITELIB}/seqdiag/tests/test_builder.pyc
-${PYSITELIB}/seqdiag/tests/test_builder.pyo
 ${PYSITELIB}/seqdiag/tests/test_generate_diagram.py
 ${PYSITELIB}/seqdiag/tests/test_generate_diagram.pyc
 ${PYSITELIB}/seqdiag/tests/test_generate_diagram.pyo
 ${PYSITELIB}/seqdiag/tests/test_pep8.py
 ${PYSITELIB}/seqdiag/tests/test_pep8.pyc
 ${PYSITELIB}/seqdiag/tests/test_pep8.pyo
+${PYSITELIB}/seqdiag/tests/test_rst_directives.py
+${PYSITELIB}/seqdiag/tests/test_rst_directives.pyc
+${PYSITELIB}/seqdiag/tests/test_rst_directives.pyo
 ${PYSITELIB}/seqdiag/tests/utils.py
 ${PYSITELIB}/seqdiag/tests/utils.pyc
 ${PYSITELIB}/seqdiag/tests/utils.pyo
