@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3584 2012/11/19 10:53:47 ryoon Exp $
+$NetBSD: CHANGES-2012,v 1.3588 2012/11/19 20:00:44 cheusov Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5469,3 +5469,7 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated databases/phpmyadmin to 3.5.4 [tron 2012-11-18]
 	Updated x11/qt4-libs to 4.8.3nb5 [ryoon 2012-11-19]
 	Updated editors/Sigil to 0.6.0 [ryoon 2012-11-19]
+	Updated graphics/py-blockdiag to 1.2.3 [cheusov 2012-11-19]
+	Updated graphics/py-actdiag to 0.4.1 [cheusov 2012-11-19]
+	Updated graphics/py-nwdiag to 0.9.2 [cheusov 2012-11-19]
+	Updated graphics/py-seqdiag to 0.8.1 [cheusov 2012-11-19]
